--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -3,6 +3,10 @@ on:
   pull_request:
     types: [opened]
   workflow_dispatch:
+  push:
+    branches: [main,dev-*]
+    paths-ignore:
+     - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
